# UserEngagementApi

./: Dockerfile  README.md  UserEngagementApi.postman_collection.json  crud.py  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: ci.yml
api/v1/: bookmarks.py  likes.py  reviews.py
core/: auth.py  config.py  context.py  db.py  logger.py
models/: basic.py  engagement.py
tests/: conftest.py  test_bookmarks.py  test_likes.py  test_reviews.py
